--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "keywords": [
     "node"
   ],
-  "maintainers": [{
-    "name": "username",
-    "email": "user@example.com"
-  }],
-  "contributors": [
-
+  "maintainers": [
+    {
+      "name": "username",
+      "email": "user@example.com"
+    }
   ],
+  "contributors": [],
   "licenses": [
     {
       "type": "MIT",
@@ -40,7 +40,8 @@
     "mongodb": ">= 0.9.9-7",
     "mint": ">= 0.3.0",
     "npm": ">= 1.1.32",
-    "tower": ">= 0.4.1"
+    "tower": ">= 0.4.1",
+    "irc": "~0.3.4"
   },
   "devDependencies": {
     "stylus": ">= 0.17.0",
@@ -58,7 +59,9 @@
     "grunt-stylus": "~0.1.4",
     "grunt-contrib": "~0.1.7",
     "superagent": ">= 0.4.0",
-    "wrench": ">= 1.3.8"
+    "wrench": ">= 1.3.8",
+    "Faker": "~0.1.3",
+    "sinon-chai": "~2.1.2"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha $(find test -name \"*Test.coffee\")",
