--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mint": ">= 0.3.0",
     "npm": ">= 1.1.32",
     "tower": ">= 0.4.1",
-    "irc": "~0.3.4"
+    "irc": "~0.3.4",
+    "gist": "git://github.com/edubkendo/node-gist"
   },
   "devDependencies": {
     "stylus": ">= 0.17.0",
